testing of code

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,19 @@
 
+on:
+    push:
+      branches:
+        - master
+
+  
+  jobs:
+    build:
+      runs-on: ubuntu-latest
+  
+      steps:
+        - name: "testing 1"
+          run: pwd
+  
+        - name: "name"
+          run: echo youssef
+            
+  
