--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,3 +31,18 @@ jobs:
 
       - name: 'printing after action'
         run: ls -a
+
+        
+
+        - name: "Login to Docker Hub"
+        run: |
+          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
+      - name: "Build image"
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/youssef_abdelnabe_said .
+
+      - name: "Push to Docker Hub"
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/youssef_abdelnabe_said
+
