--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,14 @@ jobs:
         
 
         - name: "Login to Docker Hub"
-        run: |
-          docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+        run:  docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+
 
       - name: "Build image"
-        run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/youssef_abdelnabe_said .
+        run:  docker build -t ${{ secrets.DOCKER_USERNAME }}/youssef_abdelnabe_said .
+
 
       - name: "Push to Docker Hub"
-        run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/youssef_abdelnabe_said
+        run:  docker push ${{ secrets.DOCKER_USERNAME }}/youssef_abdelnabe_said
+
 
