--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,12 @@ jobs:
 
       - name: "Login to Docker Hub"
         run: docker login --username ${{ secrets.USERNAME }} --password ${{ secrets.PASSWORD }}
+      
+      - name: "Build image"
+        run: docker build -t ${{ secrets.USERNAME }}/youssef_abdelnabe_said .
+
+      - name: "Push to Docker Hub"
+        run: docker push ${{ secrets.USERNAME }}/youssef_abdelnabe_said
 
           
      
